# py-posix-shell

./: README.md  pyproject.toml
src/py_posix_shell/: __init__.py  builtins.py  cli.py  errors.py  expansion.py  lexer.py  parser.py  posix_utils.py  shell.py
tests/: test_shell.py
