[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "py-posix-shell"
version = "0.4.5"
description = "A cross-platform POSIX-style shell written in Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "GGN_2015" }
]
keywords = ["shell", "posix", "cross-platform", "windows", "macos", "linux"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Shells",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pysh = "py_posix_shell.cli:main"
py-posix-shell = "py_posix_shell.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/py_posix_shell"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
